--- a/heatwave/app/views/users/_form.html.erb
+++ b/heatwave/app/views/users/_form.html.erb
@@ -28,8 +28,8 @@
     <%= f.text_field :password %>
   </div>
   <div class="field">
-    <%= f.label :adminAccess %><br>
-    <%= f.check_box :adminAccess %>
+    <%= f.label :admin_access %><br>
+    <%= f.check_box :admin_access %>
   </div>
   <div class="field">
     <%= f.label :gender %><br>
