--- a/heatwave/app/views/users/index.html.erb
+++ b/heatwave/app/views/users/index.html.erb
@@ -9,7 +9,7 @@
       <th>F name</th>
       <th>L name</th>
       <th>Password</th>
-      <th>Adminaccess</th>
+      <th>Admin_access</th>
       <th>Gender</th>
       <th>Address</th>
       <th>Phone</th>
@@ -29,7 +29,7 @@
         <td><%= user.f_name %></td>
         <td><%= user.l_name %></td>
         <td><%= user.password %></td>
-        <td><%= user.adminAccess %></td>
+        <td><%= user.admin_access %></td>
         <td><%= user.gender %></td>
         <td><%= user.address %></td>
         <td><%= user.phone %></td>
