--- a/heatwave/app/views/rules/_form.html.erb
+++ b/heatwave/app/views/rules/_form.html.erb
@@ -19,6 +19,14 @@
     <%= f.label :annotation %><br>
     <%= f.text_field :annotation %>
   </div>
+  <div class="field">
+    <%= f.label :delta %><br>
+    <%= f.text_field :delta %>
+  </div>
+   <div class="field">
+    <%= f.label :duration %><br>
+    <%= f.text_field :duration %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
