--- a/heatwave/app/views/rules/index.html.erb
+++ b/heatwave/app/views/rules/index.html.erb
@@ -7,6 +7,8 @@
     <tr>
       <th>Name</th>
       <th>Annotation</th>
+      <th>Delta</th>
+      <th>Duration</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -16,6 +18,8 @@
       <tr>
         <td><%= rule.name %></td>
         <td><%= rule.annotation %></td>
+        <td><%= rule.delta %></td>
+        <td><%= rule.duration %></td>
         <td><%= link_to 'Show', rule %></td>
         <td><%= link_to 'Edit', edit_rule_path(rule) %></td>
         <td><%= link_to 'Destroy', rule, method: :delete, data: { confirm: 'Are you sure?' } %></td>
