Updated the User table for Messenger::Joiner.
* Added referential integrity checks to Location,
  Message, Weather, and User.
* Removed User.address, User.postcode, and User.birthday.
* Added User.location.
* Changed User.subscribed to User.message_type.
* Added real database tests for Messenger::Joiner.recipients.
* Updated the rails application tests and views to handle the
  database and model changes.

--- a/heatwave/app/views/users/_form.html.erb
+++ b/heatwave/app/views/users/_form.html.erb
@@ -36,10 +36,6 @@
     <%= f.text_field :gender %>
   </div>
   <div class="field">
-    <%= f.label :address %><br>
-    <%= f.text_field :address %>
-  </div>
-  <div class="field">
     <%= f.label :phone %><br>
     <%= f.text_field :phone %>
   </div>
@@ -52,16 +48,12 @@
     <%= f.text_field :email %>
   </div>
   <div class="field">
-    <%= f.label :suscribed %><br>
-    <%= f.check_box :suscribed %>
+    <%= f.label :message_type %><br>
+    <%= f.text_field :message_type %>
   </div>
   <div class="field">
-    <%= f.label :birthday %><br>
-    <%= f.date_select :birthday %>
-  </div>
-  <div class="field">
-    <%= f.label :postcode %><br>
-    <%= f.text_field :postcode %>
+    <%= f.label :location %><br>
+    <%= f.text_field :location %>
   </div>
   <div class="actions">
     <%= f.submit %>
