--- a/heatwave/app/views/users/show.html.erb
+++ b/heatwave/app/views/users/show.html.erb
@@ -6,12 +6,12 @@
 </p>
 
 <p>
-  <strong>F name:</strong>
+  <strong>First name:</strong>
   <%= @user.f_name %>
 </p>
 
 <p>
-  <strong>L name:</strong>
+  <strong>Last name:</strong>
   <%= @user.l_name %>
 </p>
 
@@ -31,11 +31,6 @@
 </p>
 
 <p>
-  <strong>Address:</strong>
-  <%= @user.address %>
-</p>
-
-<p>
   <strong>Phone:</strong>
   <%= @user.phone %>
 </p>
@@ -51,18 +46,13 @@
 </p>
 
 <p>
-  <strong>Suscribed:</strong>
-  <%= @user.suscribed %>
+  <strong>Prefered Message Type:</strong>
+  <%= @user.message_type %>
 </p>
 
 <p>
-  <strong>Birthday:</strong>
-  <%= @user.birthday %>
-</p>
-
-<p>
-  <strong>Postcode:</strong>
-  <%= @user.postcode %>
+  <strong>Location:</strong>
+  <%= @user.location.name %>
 </p>
 
 <%= link_to 'Edit', edit_user_path(@user) %> |
