update rule view

--- a/heatwave/app/views/rules/_form.html.erb
+++ b/heatwave/app/views/rules/_form.html.erb
@@ -27,6 +27,14 @@
     <%= f.label :duration %><br>
     <%= f.text_field :duration %>
   </div>
+  <div class="field">
+    <%= f.label :key_advice %><br>
+    <%= f.text_field :key_advice %>
+  </div>
+     <div class="field">
+    <%= f.label :full_advice %><br>
+    <%= f.text_field :full_advice %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
