--- a/heatwave/app/views/rules/show.html.erb
+++ b/heatwave/app/views/rules/show.html.erb
@@ -20,5 +20,14 @@
   <%= @rule.duration %>
 </p>
 
+<p>
+  <strong>Key Advice:</strong>
+  <%= @rule.key_advice %>
+</p>
+
+<p>
+  <strong>Full Advice:</strong>
+  <%= @rule.full_advice %>
+</p>
 <%= link_to 'Edit', edit_rule_path(@rule) %> |
 <%= link_to 'Back', rules_path %>
