--- a/heatwave/app/views/rules/index.html.erb
+++ b/heatwave/app/views/rules/index.html.erb
@@ -9,6 +9,8 @@
       <th>Annotation</th>
       <th>Delta</th>
       <th>Duration</th>
+      <th>Key Advice</th>
+      <th>Full Advice</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -20,7 +22,9 @@
         <td><%= rule.annotation %></td>
         <td><%= rule.delta %></td>
         <td><%= rule.duration %></td>
-        <td><%= link_to 'Show', rule %></td>
+        <td><%= rule.key_advice %></td>
+        <td><%= rule.full_advice[0..15] %>...</td>
+        <td><%= link_to 'Show More', rule %></td>
         <td><%= link_to 'Edit', edit_rule_path(rule) %></td>
         <td><%= link_to 'Destroy', rule, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
