--- a/heatwave/app/views/rules/index.html.erb
+++ b/heatwave/app/views/rules/index.html.erb
@@ -6,7 +6,7 @@
   <thead>
     <tr>
       <th>Name</th>
-      <th>Annotation</th>
+      <th>Activated</th>
       <th>Delta</th>
       <th>Duration</th>
       <th>Key Advice</th>
@@ -19,7 +19,7 @@
     <% @rules.each do |rule| %>
       <tr>
         <td><%= rule.name %></td>
-        <td><%= rule.annotation %></td>
+        <td><%= rule.activated %></td>
         <td><%= rule.delta %></td>
         <td><%= rule.duration %></td>
         <td><%= rule.key_advice %></td>
