--- a/heatwave/app/views/rules/show.html.erb
+++ b/heatwave/app/views/rules/show.html.erb
@@ -6,8 +6,8 @@
 </p>
 
 <p>
-  <strong>Annotation:</strong>
-  <%= @rule.annotation %>
+  <strong>Activated:</strong>
+  <%= @rule.activated %>
 </p>
 
 <p>
