--- a/heatwave/app/views/users/index.html.erb
+++ b/heatwave/app/views/users/index.html.erb
@@ -3,16 +3,14 @@
 <table>
   <thead>
     <tr>
-      <th>Username</th>
+      <th>Email</th>
       <th>First name</th>
       <th>Last name</th>
-      <th>Password</th>
-      <th>Admin_access</th>
+      <th>Admin?</th>
       <th>Gender</th>
       <th>Phone</th>
       <th>Age</th>
-      <th>Email</th>
-      <th>Prefered Message Type</th>
+      <th>Prefered message type</th>
       <th>Location</th>
       <th colspan="3"></th>
     </tr>
@@ -21,20 +19,19 @@
   <tbody>
     <% @users.each do |user| %>
       <tr>
-        <td><%= user.username %></td>
+        <td><%= user.email %></td>
         <td><%= user.f_name %></td>
         <td><%= user.l_name %></td>
-        <td><%= user.password %></td>
         <td><%= user.admin_access %></td>
         <td><%= user.gender %></td>
         <td><%= user.phone %></td>
         <td><%= user.age %></td>
-        <td><%= user.email %></td>
         <td><%= user.message_type %></td>
         <td><%= user.location.name %></td>
         <td><%= link_to 'Show', user %></td>
         <td><%= link_to 'Edit', edit_user_path(user) %></td>
-        <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Deregister', user, method: :delete,
+                        data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
