Updated the feedback controller for devise.
* Added authentication for all actions.
* Added admin-only restrictions for the #index, #show, and #destroy
  actions.
* Removed the #edit and #update actions.
* Updated the #destroy action to mark the feedback as responded to.
* Added tests for the deleted actions to ensure the url no longer
  exists.
* Added tests for all remaining actions verifying authentication
  requirements.
* Made minor changes to the views.
* Added #admin_user! to the application controller for DRYness.

--- a/heatwave/app/views/feedbacks/show.html.erb
+++ b/heatwave/app/views/feedbacks/show.html.erb
@@ -18,5 +18,6 @@
   <%= @feedback.responded %>
 </p>
 
-<%= link_to 'Edit', edit_feedback_path(@feedback) %> |
+<td><%= link_to 'Mark as responded to', @feedback,
+                method: :delete, data: { confirm: 'Are you sure?' } %></td>
 <%= link_to 'Back', feedbacks_path %>
