--- a/heatwave/app/views/rules/show.html.erb
+++ b/heatwave/app/views/rules/show.html.erb
@@ -28,4 +28,6 @@
   <%= @rule.full_advice %>
 </p>
 <%= link_to 'Edit', edit_rule_path(@rule) %> |
+<td><%= link_to 'Disable', @rule, method: :delete,
+                                  data: { confirm: 'Are you sure?' } %></td>
 <%= link_to 'Back', rules_path %>
