--- a/heatwave/app/assets/stylesheets/application.css
+++ b/heatwave/app/assets/stylesheets/application.css
@@ -13,3 +13,15 @@
  *= require_tree .
  *= require_self
  */
+
+.alert {
+  font-weight: bold;
+}
+
+.alert-danger {
+  color: red;
+}
+
+.alert-success {
+  color: green;
+}
