--- a/heatwave/app/views/users/index.html.erb
+++ b/heatwave/app/views/users/index.html.erb
@@ -29,9 +29,6 @@
         <td><%= user.message_type %></td>
         <td><%= user.location.name %></td>
         <td><%= link_to 'Show', user %></td>
-        <td><%= link_to 'Edit', edit_user_path(user) %></td>
-        <td><%= link_to 'Deregister', user, method: :delete,
-                        data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -39,4 +36,4 @@
 
 <br>
 
-<%= link_to 'New User', new_user_path %>
+<%= link_to 'Register new user', new_user_registration_path %>
