--- a/heatwave/app/views/users/show.html.erb
+++ b/heatwave/app/views/users/show.html.erb
@@ -1,9 +1,4 @@
 <p>
-  <strong>Username:</strong>
-  <%= @user.username %>
-</p>
-
-<p>
   <strong>First name:</strong>
   <%= @user.f_name %>
 </p>
@@ -14,12 +9,7 @@
 </p>
 
 <p>
-  <strong>Password:</strong>
-  <%= @user.password %>
-</p>
-
-<p>
-  <strong>Adminaccess:</strong>
+  <strong>Is an admin?:</strong>
   <%= @user.admin_access %>
 </p>
 
@@ -29,7 +19,7 @@
 </p>
 
 <p>
-  <strong>Phone:</strong>
+  <strong>Mobile number:</strong>
   <%= @user.phone %>
 </p>
 
@@ -44,14 +34,14 @@
 </p>
 
 <p>
-  <strong>Prefered Message Type:</strong>
+  <strong>Prefered message type:</strong>
   <%= @user.message_type %>
 </p>
 
 <p>
-  <strong>Location:</strong>
+  <strong>Nearest weather station:</strong>
   <%= @user.location.name %>
 </p>
 
-<%= link_to 'Edit', edit_user_path(@user) %> |
-<%= link_to 'Back', users_path %>
+<%= link_to 'All users', users_path %>
+<%= link_to 'Edit details', edit_user_registration_path %>
