Fully implemented the users controller.
* Added controller functionality to register and update other
  users for admins.
* Added controller functionality to view the user index for admins only.
* Added devise authentication to the user controller.
* Added users' own profile pages as their home page.
* Tested the new functionality.

--- a/heatwave/app/views/users/show.html.erb
+++ b/heatwave/app/views/users/show.html.erb
@@ -44,4 +44,4 @@
 </p>
 
 <%= link_to 'All users', users_path %>
-<%= link_to 'Edit details', edit_user_registration_path %>
+<%= link_to 'Edit details', edit_user_path(@user) %>
