--- a/heatwave/app/views/users/index.html.erb
+++ b/heatwave/app/views/users/index.html.erb
@@ -7,10 +7,6 @@
       <th>First name</th>
       <th>Last name</th>
       <th>Admin?</th>
-      <th>Gender</th>
-      <th>Phone</th>
-      <th>Age</th>
-      <th>Prefered message type</th>
       <th>Location</th>
       <th colspan="3"></th>
     </tr>
@@ -23,10 +19,6 @@
         <td><%= user.f_name %></td>
         <td><%= user.l_name %></td>
         <td><%= user.admin_access %></td>
-        <td><%= user.gender %></td>
-        <td><%= user.phone %></td>
-        <td><%= user.age %></td>
-        <td><%= user.message_type %></td>
         <td><%= user.location.name %></td>
         <td><%= link_to 'Show', user %></td>
       </tr>
@@ -36,4 +28,4 @@
 
 <br>
 
-<%= link_to 'Register new user', new_user_registration_path %>
+<%= link_to 'Register new user', new_user_path %>
