Updated users and rules views.
* Made sure there is a true Back link on each view.
* Replaced 'Show' links with 'Show XXXX details', or something
  similarly contextual.
* Added the 'View all XXXX' link to appropriate rule and user
  views.
* Prevented non-admins from seeing the 'edit details' link on
  their own profile page.

--- a/heatwave/app/views/rules/edit.html.erb
+++ b/heatwave/app/views/rules/edit.html.erb
@@ -2,5 +2,6 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @rule %> |
-<%= link_to 'Back', rules_path %>
+<%= link_to 'Back', :back %> |
+<%= link_to 'Show rule details', @rule %> |
+<%= link_to 'View all rules', rules_path %>
