--- a/heatwave/app/views/users/edit.html.erb
+++ b/heatwave/app/views/users/edit.html.erb
@@ -2,5 +2,6 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @user %> |
-<%= link_to 'Back', users_path %>
+<%= link_to "Back", :back %> |
+<%= link_to 'Show user details', @user %> |
+<%= link_to 'All users', users_path %>
