--- a/heatwave/app/views/users/show.html.erb
+++ b/heatwave/app/views/users/show.html.erb
@@ -43,5 +43,7 @@
   <%= @user.location.name %>
 </p>
 
-<%= link_to 'All users', users_path %>
-<%= link_to 'Edit details', edit_user_path(@user) %>
+<% if current_user.admin_access %>
+  <%= link_to 'All users', users_path %>
+  <%= link_to 'Edit details', edit_user_path(@user) %>
+<% end %>
