--- a/heatwave/app/views/messages/index.html.erb
+++ b/heatwave/app/views/messages/index.html.erb
@@ -5,11 +5,11 @@
 <table>
   <thead>
     <tr>
-      <th>User</th>
-      <th>Message type</th>
-      <th>Sent to</th>
-      <th>Content</th>
-      <th>Send time</th>
+      <th><%= sortable 'user', 'User'%></th>
+      <th><%= sortable 'message_type', 'Message type'%></th>
+      <th><%= sortable 'sent_to', 'Sent to'%></th>
+      <th><%= sortable 'content', 'Content'%></th>
+      <th><%= sortable 'send_time', 'Send time'%></th>
       <th colspan="3"></th>
     </tr>
   </thead>
