--- a/heatwave/app/views/layouts/application.html.erb
+++ b/heatwave/app/views/layouts/application.html.erb
@@ -7,37 +7,19 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-  <% if user_signed_in? %>
-    Logged in as <strong><%= current_user.email %></strong>.
-    <%= link_to 'View profile', profile_path,
-                class: 'navbar-link' %> |
-    <%= link_to 'Edit profile', edit_user_registration_path,
-                class: 'navbar-link' %> |
-    <%= link_to "Messages log", messages_path,
-                class: 'navbar-link' %> |
-    <%= link_to "Logout", destroy_user_session_path,
-                method: :delete, class: 'navbar-link' %> |
-    <%= link_to "Unsubscribe",
-                  user_registration_path,
-                  id: current_user.id,
-                  data: { confirm: "Are you sure?" },
-                  method: :delete,
-                  class: 'navbar-link' %>
-  <% else %>
-    <%= link_to 'Sign up', new_user_registration_path,
-                class: 'navbar-link' %> |
-    <%= link_to "Sign in", new_user_session_path,
-                class: 'navbar-link' %>
- <% end %>
- <% if notice %>
+  <%= render 'layouts/header' %>
+  <% if notice %>
    <p class="alert alert-success"><%= notice %></p>
- <% end %>
- <% if alert %>
-   <p class="alert alert-danger"><%= alert %></p>
- <% end %>
+  <% end %>
+  <% if alert %>
+    <p class="alert alert-danger"><%= alert %></p>
+  <% end %>
 
  <!-- Begin yielded body -->
- <%= yield %>
+  <div class="container">
+    <%= yield %>
+    <%= render 'layouts/footer' %>
+  </div>
  <!-- End yielded body -->
 
 </body>
