--- a/heatwave/app/views/devise/registrations/edit.html.erb
+++ b/heatwave/app/views/devise/registrations/edit.html.erb
@@ -1,7 +1,17 @@
 <h2>Edit <%= resource_name.to_s.humanize %></h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+<%= form_for(resource,
+             as: resource_name,
+             url: registration_path(resource_name),
+             builder: UserFormBuilder,
+             html: { method: :put }) do |f| %>
   <%= devise_error_messages! %>
+
+  <div class="field">
+    <b><%= f.label :current_password %></b>
+    <i>(we need your current password to confirm your changes)</i><br/>
+    <%= f.password_field :current_password, autocomplete: "off" %>
+  </div>
 
   <div class="field">
     <%= f.label :email %><br />
@@ -13,34 +23,18 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
+    New password <i>(leave blank if you don't want to change it)</i><br/>
     <%= f.password_field :password, autocomplete: "off" %>
   </div>
 
   <div class="field">
-    <%= f.label :password_confirmation %><br />
+    New password confirmation<br/>
     <%= f.password_field :password_confirmation, autocomplete: "off" %>
   </div>
 
   <div class="field">
-    <%= f.label :f_name %><br>
-    <%= f.text_field :f_name %>
-  </div>
-  <div class="field">
-    <%= f.label :l_name %><br>
-    <%= f.text_field :l_name %>
-  </div>
-  <div class="field">
-    <%= f.label :gender %><br>
-    <%= f.text_field :gender %>
-  </div>
-  <div class="field">
     <%= f.label :phone %><br>
     <%= f.text_field :phone %>
-  </div>
-  <div class="field">
-    <%= f.label :age %><br>
-    <%= f.number_field :age %>
   </div>
   <div class="field">
     <%= f.label :message_type %><br>
@@ -54,17 +48,26 @@
   </div>
 
   <div class="field">
-    <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-    <%= f.password_field :current_password, autocomplete: "off" %>
+    <%= f.label :f_name %><br />
+    <%= f.text_field :f_name %>
+  </div>
+  <div class="field">
+    <%= f.label :l_name %><br />
+    <%= f.text_field :l_name %>
+  </div>
+
+  <div class="field">
+    <%= f.label :gender %><br>
+    <%= f.text_field :gender %>
+  </div>
+  <div class="field">
+    <%= f.label :age %><br>
+    <%= f.number_field :age %>
   </div>
 
   <div class="actions">
     <%= f.submit "Update" %>
   </div>
 <% end %>
-
-<h3>Cancel my account</h3>
-
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
 
 <%= link_to "Back", :back %>
