--- a/heatwave/app/views/devise/registrations/new.html.erb
+++ b/heatwave/app/views/devise/registrations/new.html.erb
@@ -1,6 +1,14 @@
 <h2>Sign up</h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+<p>
+Already have an account?
+<%= link_to "Sign in!", new_session_path(resource_name) %>
+</p>
+
+<%= form_for(resource,
+             as: resource_name,
+             url: registration_path(resource_name),
+             builder: UserFormBuilder) do |f| %>
   <%= devise_error_messages! %>
 
   <div class="field">
@@ -16,31 +24,14 @@
     <br />
     <%= f.password_field :password, autocomplete: "off" %>
   </div>
-
   <div class="field">
     <%= f.label :password_confirmation %><br />
     <%= f.password_field :password_confirmation, autocomplete: "off" %>
   </div>
 
   <div class="field">
-    <%= f.label :f_name %><br>
-    <%= f.text_field :f_name %>
-  </div>
-  <div class="field">
-    <%= f.label :l_name %><br>
-    <%= f.text_field :l_name %>
-  </div>
-  <div class="field">
-    <%= f.label :gender %><br>
-    <%= f.text_field :gender %>
-  </div>
-  <div class="field">
     <%= f.label :phone %><br>
     <%= f.text_field :phone %>
-  </div>
-  <div class="field">
-    <%= f.label :age %><br>
-    <%= f.number_field :age %>
   </div>
   <div class="field">
     <%= f.label :message_type %><br>
@@ -53,6 +44,24 @@
     <%= f.select :location_id,
                  @locations.map{ |l| [l.name, l.id] },
                  prompt: 'Select your nearest weather station' %>
+  </div>
+
+  <div class="field">
+    <%= f.label :f_name %><br />
+    <%= f.text_field :f_name %>
+  </div>
+  <div class="field">
+    <%= f.label :l_name %><br />
+    <%= f.text_field :l_name %>
+  </div>
+
+  <div class="field">
+    <%= f.label :gender %><br>
+    <%= f.text_field :gender %>
+  </div>
+  <div class="field">
+    <%= f.label :age %><br>
+    <%= f.number_field :age %>
   </div>
 
   <div class="actions">
