--- a/heatwave/app/views/layouts/application.html.erb
+++ b/heatwave/app/views/layouts/application.html.erb
@@ -14,9 +14,15 @@
     <%= link_to 'Edit profile', edit_user_registration_path,
                 class: 'navbar-link' %> |
     <%= link_to "Messages log", messages_path,
-                class: 'navbar-link' %>
-    <%= button_to "Logout", destroy_user_session_path,
-                method: :delete, class: 'navbar-link' %>
+                class: 'navbar-link' %> |
+    <%= link_to "Logout", destroy_user_session_path,
+                method: :delete, class: 'navbar-link' %> |
+    <%= link_to "Unsubscribe",
+                  user_registration_path,
+                  id: current_user.id,
+                  data: { confirm: "Are you sure?" },
+                  method: :delete,
+                  class: 'navbar-link' %>
   <% else %>
     <%= link_to 'Sign up', new_user_registration_path,
                 class: 'navbar-link' %> |
