update views to reflect third message_type value

--- a/heatwave/app/views/devise/registrations/edit.html.erb
+++ b/heatwave/app/views/devise/registrations/edit.html.erb
@@ -39,7 +39,9 @@
   <div class="field">
     <%= f.label :message_type %><br>
     <%= f.select :message_type,
-      [['SMS', 'phone'], ['Email', 'email']] %>
+      [['SMS', 'phone'],
+       ['Email', 'email'],
+       ['No Messages', 'unsubscribed']] %>
   </div>
   <div class="field">
     <%= f.label :location_id %><br>
