--- a/heatwave/app/assets/stylesheets/application.css.scss
+++ b/heatwave/app/assets/stylesheets/application.css.scss
@@ -14,7 +14,7 @@
  *= require_self
  */
 
-@import 'bootstrap';
+
 
 .alert {
   font-weight: bold;
@@ -30,4 +30,9 @@
 
 input.navbar-link {
     display: inline-block;
+}
+
+a.version:hover { 
+  background-color: white; 
+  text-decoration: none; 
 }
