--- a/heatwave/app/assets/stylesheets/custom.css.scss
+++ b/heatwave/app/assets/stylesheets/custom.css.scss
@@ -22,3 +22,8 @@ footer ul li {
 	float: left;
   margin-left: 10px;
 }
+
+a.version:hover { 
+  background-color: white; 
+  text-decoration: none; 
+}
