--- a/heatwave/app/views/devise/registrations/new.html.erb
+++ b/heatwave/app/views/devise/registrations/new.html.erb
@@ -13,7 +13,7 @@ Already have an account?
 
   <div class="field">
     <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
+    <%= f.email_field :email, autofocus: true, class:"form-control", style:"width:30%" %>
   </div>
 
   <div class="field">
@@ -22,52 +22,51 @@ Already have an account?
       <em>(<%= @minimum_password_length %> characters minimum)</em>
     <% end %>
     <br />
-    <%= f.password_field :password, autocomplete: "off" %>
+    <%= f.password_field :password, autocomplete: "off", class:"form-control", style:"width:30%" %>
   </div>
   <div class="field">
     <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
+    <%= f.password_field :password_confirmation, autocomplete: "off", class:"form-control", style:"width:30%" %>
   </div>
 
   <div class="field">
     <%= f.label :phone %><br>
-    <%= f.text_field :phone %>
+    <%= f.text_field :phone, class:"form-control", style:"width:30%" %>
   </div>
-  <div class="field">
+  <div class="form-group">
     <%= f.label :message_type %><br>
-    <%= f.select :message_type,
+    <%= f.select(:message_type,
                  [['SMS', 'phone'],
                   ['Email', 'email'],
-                  ['No Messages', 'unsubscribed']],
-                 prompt: 'Select your prefered message type' %>
+                  ['No Messages', 'unsubscribed']], {:prompt=>'Select your nearest weather station'}, {:class=>'form-control', :style=>"width:30%"}) %>
   </div>
-  <div class="field">
+  <div class="form-group">
     <%= f.label :location_id %><br>
-    <%= f.select :location_id,
+    <%= f.select(:location_id,
                  @locations.map{ |l| [l.name, l.id] },
-                 prompt: 'Select your nearest weather station' %>
+                 {:prompt=> 'Select your nearest weather station'}, {:class=>"form-control", :style=>"width:30%" })%>
   </div>
 
   <div class="field">
-    <%= f.label :f_name %><br />
-    <%= f.text_field :f_name %>
+    <%= f.label :f_name, 'Given Name' %><br />
+    <%= f.text_field :f_name, class:"form-control", style:"width:30%" %>
   </div>
   <div class="field">
-    <%= f.label :l_name %><br />
-    <%= f.text_field :l_name %>
+    <%= f.label :l_name, 'Family Name' %><br />
+    <%= f.text_field :l_name, class:"form-control", style:"width:30%" %>
   </div>
 
   <div class="field">
     <%= f.label :gender %><br>
-    <%= f.text_field :gender %>
+    <%= f.text_field :gender, class:"form-control", style:"width:10%" %>
   </div>
   <div class="field">
     <%= f.label :age %><br>
-    <%= f.number_field :age %>
+    <%= f.number_field :age, class:"form-control", style:"width:10%" %>
   </div>
 
   <div class="actions">
-    <%= f.submit "Sign up" %>
+    <%= f.submit "Sign up", class: "btn btn-large btn-primary" %>
   </div>
 <% end %>
 
