--- a/heatwave/app/views/messages/index.html.erb
+++ b/heatwave/app/views/messages/index.html.erb
@@ -2,7 +2,7 @@
 
 <h1>Listing Messages</h1>
 
-<table>
+<table class="table table-hover">
   <thead>
     <tr>
       <th><%= sortable 'email', 'User Email'%></th>
