--- a/heatwave/app/views/rules/_form.html.erb
+++ b/heatwave/app/views/rules/_form.html.erb
@@ -14,30 +14,30 @@
 
   <div class="field">
     <%= f.label :name, "Name" %><br>
-    <%= f.text_field :name %>
+    <%= f.text_field :name, class:"form-control", style:"width:30%" %>
   </div>
   <div class="field">
     <%= f.label :activated, "Status (activated or not)"%><br>
     <%= f.check_box :activated %>
   </div>
-  <div class="field">
+  <div class="form-inline">
     <%= f.label :delta, "Difference of temperature from monthly average" %>
     <br>
-    <%= f.number_field :delta, style:"width:50px" %>&#8451;
-  </div>
+    <%= f.number_field :delta, style:"width:10%", class:"form-control" %> &#8451;
+  </div><br>
    <div class="field">
     <%= f.label :duration, "Duration (number of days)" %><br>
-    <%= f.number_field :duration, style:"width:50px" %>
+    <%= f.number_field :duration, style:"width:10%", class:"form-control" %>
   </div>
   <div class="field">
     <%= f.label :key_advice %><br>
-    <%= f.text_area :key_advice, size: "60x4" %>
+    <%= f.text_area :key_advice, style:"width:50%", rows:3, class:"form-control" %>
   </div>
      <div class="field">
     <%= f.label :full_advice %><br>
-    <%= f.text_area :full_advice, size: "60x8" %>
+    <%= f.text_area :full_advice, style:"width:50%", rows:5, class:"form-control" %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit({:class=> "btn btn-large btn-primary"}) %>
   </div>
 <% end %>
