--- a/heatwave/app/views/rules/index.html.erb
+++ b/heatwave/app/views/rules/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Listing Rules</h1>
 
-<table>
+<table class="table table-hover">
   <thead>
     <tr>
       <th>Name</th>
@@ -27,5 +27,5 @@
 
 <br>
 
-<%= link_to 'Back', :back %>
+<%= link_to 'Back', :back %> |
 <%= link_to 'New Rule', new_rule_path %>
