DRY'd up the user views and fixed test case.
* Pushed the logic for custom User labels back into UserFormBuilder.
* Updated the test cases for UserFormBuilder to work with the new
  bootstrap style labels.

--- a/heatwave/app/views/devise/registrations/edit.html.erb
+++ b/heatwave/app/views/devise/registrations/edit.html.erb
@@ -51,11 +51,11 @@
   </div>
 
   <div class="field">
-    <%= f.label :f_name, 'Given Name' %><br />
+    <%= f.label :f_name %><br />
     <%= f.text_field :f_name, class:"form-control", style:"width:30%" %>
   </div>
   <div class="field">
-    <%= f.label :l_name, 'Family Name'  %><br />
+    <%= f.label :l_name %><br />
     <%= f.text_field :l_name, class:"form-control", style:"width:30%" %>
   </div>
 
