--- a/heatwave/app/views/users/_form.html.erb
+++ b/heatwave/app/views/users/_form.html.erb
@@ -25,7 +25,7 @@
   </div>
 
   <div class="field">
-    <%= f.label :admin_access, "Administrator?" %><br>
+    <%= f.label :admin_access %><br>
     <%= f.check_box :admin_access %>
   </div>
 
@@ -48,11 +48,11 @@
   </div>
 
   <div class="field">
-    <%= f.label :f_name, 'Given Name' %><br />
+    <%= f.label :f_name %><br />
     <%= f.text_field :f_name, class:"form-control", style:"width:30%" %>
   </div>
   <div class="field">
-    <%= f.label :l_name, 'Family Name' %><br />
+    <%= f.label :l_name %><br />
     <%= f.text_field :l_name, class:"form-control", style:"width:30%" %>
   </div>
 
