--- a/heatwave/app/views/devise/registrations/new.html.erb
+++ b/heatwave/app/views/devise/registrations/new.html.erb
@@ -48,11 +48,11 @@ Already have an account?
   </div>
 
   <div class="field">
-    <%= f.label :f_name, 'Given Name' %><br />
+    <%= f.label :f_name %><br />
     <%= f.text_field :f_name, class:"form-control", style:"width:30%" %>
   </div>
   <div class="field">
-    <%= f.label :l_name, 'Family Name' %><br />
+    <%= f.label :l_name %><br />
     <%= f.text_field :l_name, class:"form-control", style:"width:30%" %>
   </div>
 
